--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel ="stylesheet" href ="/fontawesome-free-6.0.0-web/css/brands.css">
     <link rel ="stylesheet" href ="/fontawesome-free-6.0.0-web/webfonts">
-    <link rel ="stylesheet" href = "/stylesheet.css">
+    <link rel ="stylesheet" href = "stylesheet.css">
     <link rel ="stylesheet" href ="/fontawesome-free-6.0.0-web/">
     <title>Title</title>
 </head>
