--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
     <div class="left-col">
         <div class ="crafts">
-            <img src="https://github.com/Elbarono/rpi_lab1_atm.github.io/blob/main/images/crafts.png" alt="Crafts">
+            <img src="https://elbarono.github.io/rpi_lab1_atm.github.io/images/crafts.png" alt="Crafts">
         </div>
         <div class="search">
             <form class = "search-form">
