--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class = "slider">
         <div class="left-col">
             <div class= "men" >
-                <img src="/images/men.png" alt="Men's wear">
+                <img src="https://elbarono.github.io/rpi_lab1_atm.github.io/images/men.png" alt="Men's wear">
             </div>
         </div>
         <div class="right-col">
