--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
         </div>
         <div class="right-col">
             <div class = "women">
-                <img src="/images/women.png" alt="Women's wear">
+                <img src="https://elbarono.github.io/rpi_lab1_atm.github.io/images/women.png" alt="Women's wear">
             </div>
             <div class = "kids">
-                <img src="/images/kids.png" alt="Baby shop">
+                <img src="https://elbarono.github.io/rpi_lab1_atm.github.io/images/kids.png" alt="Baby shop">
             </div>
         </div>
     </div>
@@ -67,7 +67,7 @@
     </div>
     </div>
     <div class="right-col">
-        <img src="/images/jewelry.png" alt="Jewelry">
+        <img src="https://elbarono.github.io/rpi_lab1_atm.github.io/images/jewelry.png" alt="Jewelry">
     </div>
 </div>
 <div class="new_products">
