--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel ="stylesheet" href = "stylesheet.css">
+    <link rel ="stylesheet" href = "../stylesheet.css">
     <title>Title</title>
 </head>
 <body>
@@ -42,7 +42,7 @@
     <div class = "slider">
         <div class="left-col">
             <div class= "men" >
-                <img src="https://elbarono.github.io/rpi_lab1_atm.github.io/images/men.png" alt="Men's wear">
+                <img src="../images/men.png" alt="Men's wear">
             </div>
         </div>
         <div class="right-col">
