--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class = "slider">
         <div class="left-col">
             <div class= "men" >
-                <img src="../images/men.png" alt="Men's wear">
+                <img src="/images/men.png" alt="Men's wear">
             </div>
         </div>
         <div class="right-col">
