--- a/index.html
+++ b/index.html
@@ -74,55 +74,181 @@
         </div>
     </div>
 </div>
-<div class="new_products">
-    <div class="new_products_header">
-        <div class="new_products_header_text">
-            New Products
-        </div>
-        <div class="new_products_header_arrows">
-        </div>
-    </div>
-    <div class="new_products_img">
-        <div>
-            <img src="" alt="new_prod1">
-        </div>
-        <div>
-            <img src="" alt="new_prod2">
-        </div>
-        <div>
-            <img src="" alt="new_prod3">
-        </div>
-    </div>
-</div>
-<div class="featured_products">
-    <div class="featured_products_header">
-        <div class="featured_products_header_text">
-            Featured Products
-        </div>
-        <div class="featured_products_header_arrows">
-        </div>
-    </div>
-    <div class="featured_products_img">
-        <div class="featured_products_img_red">
-            <img src="" alt="image-1">
-            <div>
-                20% OFF
+    <!--Часть Тани начало-->
+    <div class="new-products">
+        <div class="products-header">
+            <div class="products-header-text">
+                New Products
+            </div>
+            <div class="products-header-arrows">
+                <a href="#">
+                <div class="new-products-header-arrow">
+                    <img src="/images/left-arrow.png">
+                </div>
+                </a>
+                <a href="#">
+                <div class="new-products-header-arrow">
+                    <img src="/images/right-arrow.png">
+                </div>
+                </a>
             </div>
         </div>
-        <div class="featured_products_img_red">
-            <img src="" alt="image-2">
-        </div>
-        <div class="featured_products_img_blue">
-            <img src="" alt="image-3">
-            <div>
-                New
+        <div class="new-products-images">
+            <div class="new-products-image">
+                <img src="/images/new_prod.png" alt="new-prod1">
+            </div>
+            <div class="new-products-center-image">
+                <img src="/images/new_prod2.png" alt="new-prod2">
+                <div class="buttons-baby-shop">
+                    <div class="buttons-text"  title="Baby shop">
+                        Baby Shop
+                    </div>
+                    <div class="buttons-gift" title="Whislost">
+                        <i class="fa-solid fa-gift"></i>
+                    </div>
+                    <div class="buttons-cart" title="Add to cart">
+                        <i class="fa-solid fa-shopping-cart"></i>
+                    </div>
+                    <div class="buttons-price">
+                        $99.00
+                    </div>
+                </div>
+            </div>
+            <div class="new-products-image">
+                <img src="/images/new_prod3.png" alt="new-prod3">
             </div>
         </div>
-        <div class="featured_products_img_red">
-            <img src="" alt="image-4">
+    </div>
+    <div class="featured-products">
+        <div class="products-header">
+            <div class="products-header-text">
+                Featured Products
+            </div>
+            <div class="products-header-arrows">
+                <a href="#">
+                    <div class="featured-products-header-arrow">
+                        <img src="/images/left-arrow.png">
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="featured-products-header-arrow">
+                        <img src="/images/right-arrow.png">
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="featured-products-images">
+            <div class="featured-products-image-red">
+                <img src="/images/woman1.png" alt="image-1">
+                <div class="product-inf">
+                    <div class="product-description">
+                        <div class="product-description-title">
+                            Product Title here
+                        </div>
+                        <div class="product-description-text">
+                            Short Description here
+                        </div>
+                    </div>
+                    <div class="product-icons">
+                    <div class="product-icon">
+                        <i class="fa-solid fa-arrow-left"></i>
+                    </div>
+                    <div class="product-icon">
+                        <i class="fa-solid fa-gift"></i>
+                    </div>
+                    <div class="product-icon">
+                        <i class="fa-solid fa-shopping-cart"></i>
+                    </div>
+                    <div class="product-icon-price">
+                        $99.00
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="featured-products-image-red">
+                <img src="/images/woman2.png" alt="image-2">
+                <div class="product-inf">
+                    <div class="product-description">
+                        <div class="product-description-title">
+                            Product Title here
+                        </div>
+                        <div class="product-description-text">
+                            Short Description here
+                        </div>
+                    </div>
+                    <div class="product-icons">
+                        <div class="product-icon">
+                            <i class="fa-solid fa-arrow-left"></i>
+                        </div>
+                        <div class="product-icon">
+                            <i class="fa-solid fa-gift"></i>
+                        </div>
+                        <div class="product-icon">
+                            <i class="fa-solid fa-shopping-cart"></i>
+                        </div>
+                        <div class="product-icon-price">
+                            $99.00
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="featured-products-image-blue">
+            <img src="/images/woman3.png" alt="image-3">
+            <div class="product-inf">
+                <div class="product-description">
+                    <div class="product-description-title">
+                        Product Title here
+                    </div>
+                    <div class="product-description-text">
+                        Short Description here
+                    </div>
+                </div>
+                <div class="product-icons">
+                    <div class="product-icon">
+                        <i class="fa-solid fa-arrow-left"></i>
+                    </div>
+                    <div class="product-icon">
+                        <i class="fa-solid fa-gift"></i>
+                    </div>
+                    <div class="product-icon">
+                        <i class="fa-solid fa-shopping-cart"></i>
+                    </div>
+                    <div class="product-icon-price">
+                        $99.00
+                    </div>
+                </div>
+            </div>
+        </div>
+            <div class="featured-products-image-red">
+            <img src="/images/woman4.png" alt="image-4">
+            <div class="product-inf">
+                <div class="product-description">
+                    <div class="product-description-title">
+                        Product Title here
+                    </div>
+                    <div class="product-description-text">
+                        Short Description here
+                    </div>
+                </div>
+                <div class="product-icons">
+                    <div class="product-icon">
+                        <i class="fa-solid fa-arrow-left"></i>
+                    </div>
+                    <div class="product-icon">
+                        <i class="fa-solid fa-gift"></i>
+                    </div>
+                    <div class="product-icon">
+                        <i class="fa-solid fa-shopping-cart"></i>
+                    </div>
+                    <div class="product-icon-price">
+                        $99.00
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
     </div>
-</div>
+    <!--Часть Тани конец-->
 <div class="who_we_are">
     <div class="who_we_are_header">
         <div class="who_we_are_header_text">
