--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
         <div class="right-col">
             <div class = "women">
-                <img src="/images/women.png" alt="Women's wear">
+                <img src="https://github.com/Elbarono/rpi_lab1_atm.github.io/blob/main/images/women.png" alt="Women's wear">
             </div>
             <div class = "kids">
                 <img src="/images/kids1.png" alt="Baby shop">
