--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel ="stylesheet" href = "/stylesheet.css">
-    <link rel ="stylesheet" href = "css/all.min.css">
+    <link rel ="stylesheet" href = "fontawesome-free-6.0.0-web/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
@@ -146,7 +146,7 @@
         </div>
         <div class="featured-products-images">
             <div class="featured-products-image red">
-                
+                <img src="https://github.com/Elbarono/rpi_lab1_atm.github.io/blob/main/images/woman1.png" alt="image-1">
                 <div class="product-inf">
                     <div class="product-description">
                         <div class="product-description-title">
